# NOCAP

./: LICENSE  README.md  pyproject.toml
src/nocap/: cli.py  tools.py
tests/: test_filename.py  test_grab.py  test_parsing.py
