[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nocap"
version = "0.4.0"
description = "Capture tool output. No cap."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cap = "nocap.cli:main"

[project.urls]
Homepage = "https://github.com/BLTSEC/nocap"
Repository = "https://github.com/BLTSEC/nocap"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/nocap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
